@startuml

title __TEST_MOCK_UBFLIX's Class Diagram__\n

  namespace ub.edu.controller {
    class ub.edu.controller.Controller {
    }
  }
  

  namespace ub.edu.model {
    class ub.edu.model.CarteraSocis {
    }

  }
  

  namespace ub.edu.model {
    class ub.edu.model.Soci {
    }
  }
  

  namespace ub.edu.model {
    class ub.edu.model.Excursio {
    }
  }
  

  namespace ub.edu.model {
    class ub.edu.model.Especie {
    }
  }
  

namespace ub.edu.model {
CarteraSocis "1" --> "*" Soci: conté
Excursio "*" -->"*" Especie: explora
}
  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAO {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOSoci {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOExcursio {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOEspecie {
    }
  }

  namespace ub.edu.resources.dao {
    namespace MOCK {
      class ub.edu.resources.dao.MOCK.DAOEspecieMOCK {
             }
    class ub.edu.resources.dao.MOCK.DAOSociMOCK {
          }
          class ub.edu.resources.dao.MOCK.DAOExcursioMOCK {
                }
                }

  }
  

  namespace ub.edu.resources.service {
    interface ub.edu.resources.service.AbstractFactoryData {
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.DataService {
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.FactoryMOCK {
    }
  }
  

  ub.edu.controller.Controller o-- ub.edu.model.CarteraSocis : carteraSocis
  ub.edu.controller.Controller o-- ub.edu.model.Excursio : excursio
  ub.edu.controller.Controller o-- ub.edu.resources.service.DataService : dataService
  ub.edu.controller.Controller o-- ub.edu.resources.service.AbstractFactoryData : factory
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOSoci : sociDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOExcursio : excursioDAO
  ub.edu.resources.service.FactoryMOCK -up-|> ub.edu.resources.service.AbstractFactoryData
ub.edu.resources.service.DataService o.. ub.edu.resources.dao.DAOEspecie : especieDAO

  ub.edu.resources.dao.DAOSoci -up-|> ub.edu.resources.dao.DAO: implements
ub.edu.resources.dao.DAOExcursio -up-|> ub.edu.resources.dao.DAO: implements
ub.edu.resources.dao.DAOEspecie .up.|> ub.edu.resources.dao.DAO: implements
ub.edu.resources.dao.MOCK.DAOSociMOCK -up-|> ub.edu.resources.dao.DAOSoci: implements
    ub.edu.resources.dao.MOCK.DAOExcursioMOCK -up-|> ub.edu.resources.dao.DAOExcursio: implements

        ub.edu.resources.dao.MOCK.DAOEspecieMOCK .up.|> ub.edu.resources.dao.DAOEspecie:implements



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
